Lock everything down